style: criando telas de listagem e Cadastro de UCs

--- a/app/Resources/views/main.twig
+++ b/app/Resources/views/main.twig
@@ -8,6 +8,8 @@
   {# CDN - Fomantic UI CSS #}
   <link
       rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fomantic-ui@2.9.3/dist/semantic.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap-utilities.min.css">
 
   {# CDN - Boxicons #}
   <link
